--- a/index.html
+++ b/index.html
@@ -2,11 +2,69 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Welcome to Sedona!</title>
   </head>
   <body>
+    <header class="header">
+      <nav class="navigation">
+        <a class="header-logo">
+          <img src="img/logo.png" width="140" height="71"
+            alt="Логотип">
+        </a>
+          <ul class="site-navigation">
+            <li><a href="info.html">Информация</a></li>
+            <li><a href="photos-and-videos.html">Фото и видео</a></li>
+            <li><a href="state-map.html">Карта штата</a></li>
+            <li><a href="hotels.html">Гостиницы</a></li>
+          </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="visually-hidden">Город Седона</h1>
+      <section class="welcome-block">
+        <img class="background-image" src="img/background-image.jpg"
+        width="1200" height="773" alt="Виды Седоны">
+        <img class="welcome-image" src="img/welcome-image.png" width="459"
+        height="353" alt="Добро пожаловать!">
+        <div class="polygon" src="img/polygon.png" width="1200" height="59"></div>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <section class="Sedona-intro">
+        <h2 class="Sedona-town">Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</h2>
+        <p class="features-intro">Рассмотрим 5 причин, по которым Седона круче,
+          чем гранд каньон!</p>
+      </section>
 
+      <section class="features">
+        <!--Здесь будет описание преимуществ Седоны-->
+      </section>
+
+      <section class="booking">
+        <h2 class="booking-heading">Заинтересовались?</h2>
+        <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в седоне</p>
+        <div class="hotel-search">ПОИСК ГОСТИНИЦЫ В седоне</div>
+        <!--Здесь будет форма-->
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p class="hashtag">#visitSEDONA</p>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Twitter</a></li>
+          <li><a class="social-button" href="#">Facebook</a></li>
+          <li><a class="social-button" href="#">YouTube</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <b>Website by</b>
+        <a class="button developer" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/htmlacademy-logo" width="115" height="41"
+          alt="Логотип академии">
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
