--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <title>Welcome to Sedona!</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="navigation">
+    <header class="main-header">
+      <nav class="main-navigation">
         <a class="header-logo">
-          <img src="img/logo.png" width="140" height="71"
-            alt="Логотип">
+          <img src="img/logo.png" width="140" height="71" alt="Логотип Седоны">
         </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
@@ -20,20 +19,11 @@
       </nav>
     </header>
     <main class="container">
-      <h1 class="visually-hidden">Город Седона</h1>
       <section class="welcome-block">
-        <img class="background-image" src="img/background-image.jpg"
-        width="1200" height="773" alt="Виды Седоны">
-        <img class="welcome-image" src="img/welcome-image.png" width="459"
-        height="353" alt="Добро пожаловать!">
-        <div class="polygon" src="img/polygon.png" width="1200" height="59"></div>
-      </section>
-
-      <section class="Sedona-intro">
-        <h2 class="Sedona-town">Седона — небольшой городок в Аризоне,
-        заслуживающий большего!</h2>
-        <p class="features-intro">Рассмотрим 5 причин, по которым Седона круче,
-          чем гранд каньон!</p>
+        <h1 class="visually-hidden">Город Седона</h1>
+        <img class="welcome-image" src="img/welcome-image.png" width="459" height="353" alt="Добро пожаловать!">
+        <p class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="features-intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
 
       <section class="features">
@@ -42,27 +32,23 @@
 
       <section class="booking">
         <h2 class="booking-heading">Заинтересовались?</h2>
-        <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения гостиниц в седоне</p>
-        <div class="hotel-search">ПОИСК ГОСТИНИЦЫ В седоне</div>
+        <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <a class="booking-header">поиск гостиницы в Седоне</a>
         <!--Здесь будет форма-->
       </section>
     </main>
 
-    <footer class="footer">
-      <p class="hashtag">#visitSEDONA</p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Twitter</a></li>
-          <li><a class="social-button" href="#">Facebook</a></li>
-          <li><a class="social-button" href="#">YouTube</a></li>
-        </ul>
-      </div>
+    <footer class="main-footer">
+      <p class="hashtag">#visitsedona</p>
+      <ul class="footer-social">
+        <li><a class="social-button social-button-twitter" href="#">Twitter</a></li>
+        <li><a class="social-button social-button-facebook" href="#">Facebook</a></li>
+        <li><a class="social-button social-button-youtube" href="#">YouTube</a></li>
+      </ul>
       <p class="footer-copyright">
-        <b>Website by</b>
-        <a class="button developer" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo" width="115" height="41"
-          alt="Логотип академии">
+        <span>Website by</span>
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/htmlacademy-logo" width="115" height="41" alt="Логотип htmlacademy">
         </a>
       </p>
     </footer>
