--- a/hotels.html
+++ b/hotels.html
@@ -14,7 +14,7 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="photos-and-videos.html">Фото и видео</a></li>
             <li><a href="state-map.html">Карта штата</a></li>
-            <li class="site-navigation-current">Гостиницы</li>
+            <li><class="site-navigation-current"><a>Гостиницы</a></li>
           </ul>
       </nav>
     </header>
