--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo" href="index.html">
-          <img src="img/logo.svg" width="140" height="71" alt="Логотип Седоны">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
         </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
@@ -31,7 +31,7 @@
         <h2 class="visually-hidden">Список гостиниц</h2>
         <ul class="hotels-list">
           <li class="hotels-item">
-            <img src="img/amara" width="135" height="90" alt="Фото Amara Resort & Spa">
+            <img src="img/amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
             <h3 class="hotel-name">Amara Resort & Spa</h3>
             <div class="hotel-description">
               <span class="hotel-type">Гостиница</span>
@@ -51,7 +51,7 @@
           </li>
 
           <li class="hotels-item">
-              <img src="img/desert" width="135" height="90" alt="Фото Desert Quail Inn">
+              <img src="img/desert.jpg" width="135" height="90" alt="Фото Desert Quail Inn">
               <h3 class="hotel-name">Desert Quail Inn</h3>
               <div class="hotel-description">
                 <span class="hotel-type">Мотель</span>
@@ -68,7 +68,7 @@
             </li>
 
             <li class="hotels-item">
-                <img src="img/villas " width="135" height="90" alt="Фото Villas at Poco Diablo">
+                <img src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
                 <h3 class="hotel-name">Villas at Poco Diablo</h3>
                 <div class="hotel-information">
                   <span class="hotel-type">Апартаменты</span>
@@ -95,7 +95,7 @@
       <p class="footer-copyright">
         <span>Website by</span>
         <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo" width="115" height="41" alt="Логотип htmlacademy">
+          <img src="img/htmlacademy-logo.svg" width="115" height="41" alt="Логотип htmlacademy">
         </a>
       </p>
     </footer>
