--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo">
-          <img src="img/logo.png" width="140" height="71" alt="Логотип Седоны">
+          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
         </a>
           <ul class="site-navigation">
             <li><a href="info.html">Информация</a></li>
@@ -48,7 +48,7 @@
       <p class="footer-copyright">
         <span>Website by</span>
         <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo" width="115" height="41" alt="Логотип htmlacademy">
+          <img src="img/htmlacademy-logo.svg" width="115" height="41" alt="Логотип htmlacademy">
         </a>
       </p>
     </footer>
