--- a/hotels.html
+++ b/hotels.html
@@ -14,7 +14,7 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="photos-and-videos.html">Фото и видео</a></li>
             <li><a href="state-map.html">Карта штата</a></li>
-            <li><class="site-navigation-current"><a>Гостиницы</a></li>
+            <li><a class="site-navigation-current">Гостиницы</a></li>
           </ul>
       </nav>
     </header>
@@ -30,17 +30,20 @@
             <ul>
               <li class="filter-option">
                 <label>
-                  <input type="checkbox" name="pool" checked>Бассейн
+                  <input type="checkbox" name="pool" checked>
+                  <span>Бассейн</span>
                 </label>
                 </li>
                 <li class="filter-option">
                   <label>
-                    <input type="checkbox" name="parking">Парковка
+                    <input type="checkbox" name="parking">
+                    <span>Парковка</span>
                   </label>
                 </li>
                 <li class="filter-option">
                   <label>
-                    <input type="checkbox" name="wifi">Wi-Fi
+                    <input type="checkbox" name="wifi">
+                    <span>Wi-Fi</span>
                   </label>
                 </li>
             </ul>
@@ -59,6 +62,7 @@
                 </label>
               </li>
               <li class="filter-option">
+                <label>
                 <input type="checkbox" name="apartment" checked>Апартаменты
               </label>
             </li>
@@ -66,12 +70,10 @@
           </fieldset>
           <fieldset>
             <legend>Стоимость в сутки(Р):</legend>
-            <div class="output-area">
-              <output name="price"></output>
-              <span class="min">От 0</span>
-              <span class="max">До 3000</span>
-            </div>
-            <input type="range" min="0" max="3000">
+              <!--Здесь будет вывод стоимости-->
+            <label>
+              <input type="range" name="price-range" min="0" max="3000">
+            </label>
           </fieldset>
           <button type="submit" class="button show">Показать</button>
       </section>
