--- a/hotels.html
+++ b/hotels.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы Седоны</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="hotels-page">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="header-logo" href="index.html">
@@ -14,7 +17,7 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="photos-and-videos.html">Фото и видео</a></li>
             <li><a href="state-map.html">Карта штата</a></li>
-            <li><a class="site-navigation-current">Гостиницы</a></li>
+            <li><a class="site-navigation site-navigation-current">Гостиницы</a></li>
           </ul>
       </nav>
     </header>
@@ -30,19 +33,19 @@
             <ul>
               <li class="filter-option">
                 <label>
-                  <input type="checkbox" name="pool" checked>
+                  <input class="filter-input" type="checkbox" name="pool" checked>
                   <span>Бассейн</span>
                 </label>
                 </li>
                 <li class="filter-option">
                   <label>
-                    <input type="checkbox" name="parking">
+                    <input class="filter-input" type="checkbox" name="parking">
                     <span>Парковка</span>
                   </label>
                 </li>
                 <li class="filter-option">
                   <label>
-                    <input type="checkbox" name="wifi">
+                    <input class="filter-input" type="checkbox" name="wifi">
                     <span>Wi-Fi</span>
                   </label>
                 </li>
@@ -53,17 +56,17 @@
             <ul>
               <li clas="filter-option">
                 <label>
-                  <input type="checkbox" name="hotel" checked>Гостиница
+                  <input class="filter-input" type="checkbox" name="hotel" checked>Гостиница
                 </label>
               </li>
               <li>
                 <label>
-                  <input type="checkbox" name="motel" checked>Мотель
+                  <input class="filter-input" type="checkbox" name="motel" checked>Мотель
                 </label>
               </li>
               <li class="filter-option">
                 <label>
-                <input type="checkbox" name="apartment" checked>Апартаменты
+                <input class="filter-input" type="checkbox" name="apartment" checked>Апартаменты
               </label>
             </li>
           </ul>
@@ -75,7 +78,7 @@
               <input type="range" name="price-range" min="0" max="3000">
             </label>
           </fieldset>
-          <button type="submit" class="button show">Показать</button>
+          <button type="submit" class="button-show">Показать</button>
       </section>
 
       <section class="filters-results">
@@ -92,8 +95,8 @@
               <span class="hotel-type">Гостиница</span>
               <span class="hotel-price">От 4000 Р.</span>
             </div>
-              <a class="button details" href="amara.html">Подробнее</a>
-              <a class="button book" href="#">Забронировать</a>
+              <a class="details" href="amara.html">Подробнее</a>
+              <a class="book" href="#">Забронировать</a>
               <!--Что должно происходить по нажатию кнопки? Добвление в корзину/
             переход на новую страницу?-->
             <div class="stars">
