--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome to Sedona!</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=latin,cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=latin,cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -36,30 +36,30 @@
       <section class="booking">
         <h2 class="booking-heading">Заинтересовались?</h2>
         <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="open-booking">поиск гостиницы в Седоне</a>
+        <a class="open-booking" href="#">поиск гостиницы в Седоне</a>
           <form class="booking" action="https://echo.htmlacademy.ru" method="post">
             <ul class="booking">
               <li>
                 <label for="checkin-date">Дата заезда:</label>
                 <input type="text" id="checkin-date" name="checkin-date" value="" placeholder="24 апреля 2017">
-                <button type="button" class="calendar"></button>
+                <button type="button" class="calendar">Календарь</button>
               </li>
               <li>
                 <label for="checkout-date">Дата выезда</label>
                 <input type="text" id="checkout-date" name="checkout-date" value="" placeholder="4 июля 2017">
-                <button type="button" class="calendar"></button>
+                <button type="button" class="calendar">Календарь</button>
               </li>
               <li>
                 <label for="adults">Взрослые:</label>
-                <button type="button" class="button less"></button>
+                <button type="button" class="button less">Меньше</button>
                 <input type="number" id="adults" name="adults" value="" placeholder="2">
-                <button type="button" class="button more"></button>
+                <button type="button" class="button more">Больше</button>
               </li>
               <li>
                 <label for="children">Дети:</label>
-                <button type="button" class="button less"></button>
+                <button type="button" class="button less">Меньше</button>
                 <input type="number" id="children" name="children" value="" placeholder="2">
-                <button type="button" class="button more"></button>
+                <button type="button" class="button more">Больше</button>
               </li>
             </ul>
             <button type="submit" class="button-search">Найти</button>
@@ -77,7 +77,7 @@
       <p class="footer-copyright">
         <span>Website by</span>
         <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="img/htmlacademy-logo.svg" width="115" height="41" alt="Логотип htmlacademy">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип htmlacademy">
         </a>
       </p>
     </footer>
