--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <h2 class="booking-heading">Заинтересовались?</h2>
         <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="open-booking" href="#">поиск гостиницы в Седоне</a>
-          <form class="booking" action="https://echo.htmlacademy.ru" method="post">
-            <ul class="booking">
+          <form class="booking-form" action="https://echo.htmlacademy.ru" method="post">
+            <ul class="booking-fields">
               <li>
                 <label for="checkin-date">Дата заезда:</label>
                 <input type="text" id="checkin-date" name="checkin-date" value="" placeholder="24 апреля 2017">
