--- a/hotels.html
+++ b/hotels.html
@@ -10,15 +10,21 @@
   <body class="hotels-page">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="header-logo" href="index.html">
-          <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
-        </a>
+        <div class="main-navigation-wrapper">
           <ul class="site-navigation">
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="photos-and-videos.html">Фото и видео</a></li>
-            <li><a href="state-map.html">Карта штата</a></li>
-            <li><a class="site-navigation-current">Гостиницы</a></li>
+            <div class="navigation-left-half">
+              <li><a href="info.html">Информация</a></li>
+              <li><a href="photos-and-videos.html">Фото и видео</a></li>
+            </div>
+            <a class="header-logo">
+              <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
+            </a>
+            <div class="navigation-right-half">
+              <li><a href="state-map.html">Карта штата</a></li>
+              <li><a class="site-navigation-current">Гостиницы</a></li>
+            </div>
           </ul>
+        </div>
       </nav>
     </header>
 
@@ -28,6 +34,8 @@
       <section class="filters">
         <h2 class="visually-hidden">Фильтр гостиниц</h2>
         <form clas="filter" method="get" action="https://echo.htmlacademy.ru">
+          <div class="filters-wrapper">
+            <div class="filters-left">
           <fieldset>
             <legend>Инфраструктура:</legend>
             <ul>
@@ -71,6 +79,8 @@
             </li>
           </ul>
           </fieldset>
+        </div>
+        <div class="filters-right">
           <fieldset>
             <legend>Стоимость в сутки(Р):</legend>
               <!--Здесь будет вывод стоимости-->
@@ -78,7 +88,9 @@
               <input type="range" name="price-range" min="0" max="3000">
             </label>
           </fieldset>
-          <button type="submit" class="button-show">Показать</button>
+        <button type="submit" class="button-show">Показать</button>
+        </div>
+        </div>
       </section>
 
       <section class="filters-results">
@@ -89,7 +101,9 @@
         <h2 class="visually-hidden">Список гостиниц</h2>
         <ul class="hotels-list">
           <li class="hotels-item">
-            <img src="img/amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
+            <div class="hotels-item-columns">
+            <img class="hotel-image" src="img/amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
+            <div class="hotels-item-left">
             <h3><a class="hotel-name" href="#">Amara Resort & Spa</a></h3>
             <div class="hotel-description">
               <span class="hotel-type">Гостиница</span>
@@ -97,8 +111,8 @@
             </div>
               <a class="details" href="amara.html">Подробнее</a>
               <a class="book" href="#">Забронировать</a>
-              <!--Что должно происходить по нажатию кнопки? Добвление в корзину/
-            переход на новую страницу?-->
+            </div>
+            <div class="hotels-item-right">
             <div class="stars">
               <img class="star" src="img/star.svg" width="18" height="17" alt="4 звезды">
               <img class="star" src="img/star.svg" width="18" height="17">
@@ -106,10 +120,14 @@
               <img class="star" src="img/star.svg" width="18" height="17">
             </div>
             <div class="rating">Рейтинг: 8,5</div>
+          </div>
+        </div>
           </li>
 
           <li class="hotels-item">
+            <div class="hotels-item-columns">
               <img src="img/desert.jpg" width="135" height="90" alt="Фото Desert Quail Inn">
+              <div class="hotels-item-left">
               <h3><a class="hotel-name" href="#">Desert Quail Inn</a></h3>
               <div class="hotel-description">
                 <span class="hotel-type">Мотель</span>
@@ -117,16 +135,21 @@
               </div>
                 <a class="button details" href="desert.html">Подробнее</a>
                 <a class="button book" href="#">Забронировать</a>
+              </div>
+              <div class="hotels-item-right">
               <div class="stars">
                 <img class="star" src="img/star.svg" width="18" height="17" alt="3 звезды">
                 <img class="star" src="img/star.svg" width="18" height="17">
                 <img class="star" src="img/star.svg" width="18" height="17">
               </div>
               <div class="rating">Рейтинг: 8,9</div>
+            </div>
             </li>
 
             <li class="hotels-item">
+              <div class="hotels-item-columns">
                 <img src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
+                <div class="hotels-item-left">
                 <h3><a class="hotel-name" href="#">Villas at Poco Diablo</a></h3>
                 <div class="hotel-information">
                   <span class="hotel-type">Апартаменты</span>
@@ -134,11 +157,15 @@
                 </div>
                 <a class="button details" href="villas.html">Подробнее</a>
                 <a class="button book" href="#">Забронировать</a>
+                </div>
+                <div class="hotels-item-right">
                 <div class="stars">
                   <img class="star" src="img/star.svg" width="18" height="17" alt="2 звезды">
                   <img class="star" src="img/star.svg" width="18" height="17">
                 </div>
                 <div class="rating">Рейтинг: 9,2</div>
+                </div>
+              </div>
               </li>
       </section>
     </main>
