--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
+        <div class="main-navigation-wrapper">
           <ul class="site-navigation">
             <div class="navigation-left-half">
               <li><a href="info.html">Информация</a></li>
@@ -23,20 +24,76 @@
               <li><a href="hotels.html">Гостиницы</a></li>
             </div>
           </ul>
+        </div>
       </nav>
     </header>
     <main class="container">
       <section class="welcome-block">
         <h1 class="visually-hidden">Город Седона</h1>
         <img class="welcome-image" src="img/welcome-image.svg" width="459" height="353" alt="Добро пожаловать!">
-        <p class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="sedona-town">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         <p class="features-intro">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
 
       <section class="features">
-        <!--Здесь будет описание преимуществ Седоны-->
+        <ul class="features-list">
+          <li class="feature-1">
+            <h2 class="feature-name">Настоящий городок</h2>
+            <span class="feature-number">— №1 —</span>
+            <p class="feature-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="feature-pic-1">
+          </li>
+          <li class=" advice advice-1">
+            <h2 class="advice-name">Жильё</h2>
+            <p class="advice-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advice advice-2">
+            <h2 class="advice-name">Еда</h2>
+            <p class="advice-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advice advice-3">
+            <h2 class="advice-name">Сувениры</h2>
+            <p class="advice-description">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="feature-2">
+            <h2 class="feature-name">Там есть<br>Мост дьявола</h2>
+            <span class="feature-number">— №2 —</span>
+            <p class="feature-description">Да, по нему можно пройти! Если конечно<br>вы осмелитесь</p>
+            <img class="feature-pic-2">
+          </li>
+          <li class="feature-3">
+            <h2 class="feature-name">Небольшая<br>площадь</h2>
+            <span class="feature-number">— №3 —</span>
+            <p class="feature-description">Все достопримечательности<br>находятся очень близко</p>
+          </li>
+          <li class="feature-4">
+            <h2 class="feature-name">Красивая<br>дорога</h2>
+            <span class="feature-number">— №4 —</span>
+            <p class="feature-description">Ехать в Седону из Лас-Вегаса совсем<br>не скучно!</p>
+          </li>
+          <li class="feature-5">
+            <h2 class="feature-name">Мало<br>туристов</h2>
+            <span class="feature-number">— №5 —</span>
+            <p class="feature-description">Большинство едет в гранд каньон<br>и толпится там</p>
+          </li>
+        </ul>
+<!--
+        <ul class="advice-list">
+          <li class="advice-1">
+            <h2 class="advice-name">Жильё</h2>
+            <p class="advice-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advice-2">
+            <h2 class="advice-name">Еда</h2>
+            <p class="advice-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advice-3">
+            <h2 class="advice-name">Сувениры</h2>
+            <p class="advice-description">Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
       </section>
-
+-->
       <section class="booking">
         <h2 class="booking-heading">Заинтересовались?</h2>
         <p class="booking-intro">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
