--- a/hotels.html
+++ b/hotels.html
@@ -10,21 +10,15 @@
   <body class="hotels-page">
     <header class="main-header">
       <nav class="main-navigation">
-        <div class="main-navigation-wrapper">
+          <a class="header-logo">
+            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
+          </a>
           <ul class="site-navigation">
-            <div class="navigation-left-half">
-              <li><a href="info.html">Информация</a></li>
-              <li><a href="photos-and-videos.html">Фото и видео</a></li>
-            </div>
-            <a class="header-logo">
-              <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седоны">
-            </a>
-            <div class="navigation-right-half">
-              <li><a href="state-map.html">Карта штата</a></li>
-              <li><a class="site-navigation-current">Гостиницы</a></li>
-            </div>
+              <li><a class="navigation-item-left"href="info.html">Информация</a></li>
+              <li><a class="navigation-item-left" href="photos-and-videos.html">Фото и видео</a></li>
+              <li><a class="navigation-item-right" href="state-map.html">Карта штата</a></li>
+              <li><a class="navigation-item-right" class="site-navigation-current">Гостиницы</a></li>
           </ul>
-        </div>
       </nav>
     </header>
 
@@ -34,7 +28,6 @@
       <section class="filters">
         <h2 class="visually-hidden">Фильтр гостиниц</h2>
         <form clas="filter" method="get" action="https://echo.htmlacademy.ru">
-          <div class="filters-wrapper">
             <div class="filters-left">
           <fieldset>
             <legend>Инфраструктура:</legend>
@@ -90,7 +83,6 @@
           </fieldset>
         <button type="submit" class="button-show">Показать</button>
         </div>
-        </div>
       </section>
 
       <section class="filters-results">
@@ -101,9 +93,8 @@
         <h2 class="visually-hidden">Список гостиниц</h2>
         <ul class="hotels-list">
           <li class="hotels-item">
-            <div class="hotels-item-columns">
             <img class="hotel-image" src="img/amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
-            <div class="hotels-item-left">
+            <div class="hotels-item-info">
             <h3><a class="hotel-name" href="#">Amara Resort & Spa</a></h3>
             <div class="hotel-description">
               <span class="hotel-type">Гостиница</span>
@@ -112,7 +103,7 @@
               <a class="details" href="amara.html">Подробнее</a>
               <a class="book" href="#">Забронировать</a>
             </div>
-            <div class="hotels-item-right">
+            <div class="hotels-item-rating">
             <div class="stars">
               <img class="star" src="img/star.svg" width="18" height="17" alt="4 звезды">
               <img class="star" src="img/star.svg" width="18" height="17">
@@ -121,13 +112,11 @@
             </div>
             <div class="rating">Рейтинг: 8,5</div>
           </div>
-        </div>
           </li>
 
           <li class="hotels-item">
-            <div class="hotels-item-columns">
-              <img src="img/desert.jpg" width="135" height="90" alt="Фото Desert Quail Inn">
-              <div class="hotels-item-left">
+              <img class="hotel-image" src="img/desert.jpg" width="135" height="90" alt="Фото Desert Quail Inn">
+              <div class="hotels-item-info">
               <h3><a class="hotel-name" href="#">Desert Quail Inn</a></h3>
               <div class="hotel-description">
                 <span class="hotel-type">Мотель</span>
@@ -136,7 +125,7 @@
                 <a class="button details" href="desert.html">Подробнее</a>
                 <a class="button book" href="#">Забронировать</a>
               </div>
-              <div class="hotels-item-right">
+              <div class="hotels-item-rating">
               <div class="stars">
                 <img class="star" src="img/star.svg" width="18" height="17" alt="3 звезды">
                 <img class="star" src="img/star.svg" width="18" height="17">
@@ -147,9 +136,8 @@
             </li>
 
             <li class="hotels-item">
-              <div class="hotels-item-columns">
-                <img src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
-                <div class="hotels-item-left">
+                <img class="hotel-image" src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
+                <div class="hotels-item-info">
                 <h3><a class="hotel-name" href="#">Villas at Poco Diablo</a></h3>
                 <div class="hotel-information">
                   <span class="hotel-type">Апартаменты</span>
@@ -158,14 +146,13 @@
                 <a class="button details" href="villas.html">Подробнее</a>
                 <a class="button book" href="#">Забронировать</a>
                 </div>
-                <div class="hotels-item-right">
+                <div class="hotels-item-rating">
                 <div class="stars">
                   <img class="star" src="img/star.svg" width="18" height="17" alt="2 звезды">
                   <img class="star" src="img/star.svg" width="18" height="17">
                 </div>
                 <div class="rating">Рейтинг: 9,2</div>
                 </div>
-              </div>
               </li>
       </section>
     </main>
