--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <button type="submit" class="button-search">Найти</button>
   </form>
 </section>
+</main>
 
     <footer class="main-footer">
       <p class="hashtag">#visitsedona</p>
@@ -147,7 +148,6 @@
         </a>
       </p>
     </footer>
-  </div>
 
   <script>
   var openBooking = document.querySelector(".open-booking");
