--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container index-container">
+    <div class="container index-container"></div>
     <header class="main-header">
       <nav class="main-navigation">
           <a class="header-logo">
