--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container index-container"></div>
+    <div class="container index-container">
     <header class="main-header">
       <nav class="main-navigation">
           <a class="header-logo">
@@ -159,5 +159,6 @@
     checkin.focus();
   });
   </script>
+  </div>
   </body>
 </html>
