--- a/hotels.html
+++ b/hotels.html
@@ -107,11 +107,11 @@
         <ul class="hotels-list">
           <li class="hotels-item">
             <img class="hotel-image" src="img/amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
-            <div class="hotels-item-info">
-            <h3><a class="hotel-name" href="#">Amara Resort & Spa</a></h3>
+            <div class="hotel-item-info">
+            <a class="hotel-name" href="#">Amara Resort & Spa</a>
             <div class="hotel-description">
-              <span class="hotel-type">Гостиница</span>
-              <span class="hotel-price">От 4000 Р.</span>
+              <span class="hotel-description hotel-type">Гостиница</span>
+              <span class="hotel-description hotel-price">От 4000 Р.</span>
             </div>
               <a class="hotel-button details" href="amara.html">Подробнее</a>
               <a class="hotel-button book" href="#">Забронировать</a>
@@ -129,8 +129,8 @@
 
           <li class="hotels-item">
               <img class="hotel-image" src="img/desert.jpg" width="135" height="90" alt="Фото Desert Quail Inn">
-              <div class="hotels-item-info">
-              <h3><a class="hotel-name" href="#">Desert Quail Inn</a></h3>
+              <div class="hotel-item-info">
+              <a class="hotel-name" href="#">Desert Quail Inn</a>
               <div class="hotel-description">
                 <span class="hotel-type">Мотель</span>
                 <span class="hotel-type">От 3000 Р.</span>
@@ -150,8 +150,8 @@
 
             <li class="hotels-item">
                 <img class="hotel-image" src="img/villas.jpg" width="135" height="90" alt="Фото Villas at Poco Diablo">
-                <div class="hotels-item-info">
-                <h3><a class="hotel-name" href="#">Villas at Poco Diablo</a></h3>
+                <div class="hotel-item-info">
+                <a class="hotel-name" href="#">Villas at Poco Diablo</a>
                 <div class="hotel-descriprion">
                   <span class="hotel-type">Апартаменты</span>
                   <span class="hotel-price">От 2000 Р.</span>
