--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
     <div class="booking-wrapper">
       <p class="booking-item">
         <label for="checkin-date">Дата заезда:</label>
-        <input class="input-date" id="checkin-date" type="text" name="checkin-date" value="24 апреля 2017">
+        <input class="input-date" id="checkin-date" type="text" name="checkin-date" value="24 апреля 2017" required>
         <button type="button" name="calendar" class="button form-icon calendar" aria-label="Календарь">
           <svg width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </button>
       </p>
       <p class="booking-item">
         <label for="checkout-date">Дата выезда:</label>
-        <input class="input-date" id="checkout-date" type="text" name="checkout-date" value="4 июля 2017">
+        <input class="input-date" id="checkout-date" type="text" name="checkout-date" value="4 июля 2017" required>
         <button type="button" name="calendar" class="button form-icon calendar" aria-label="Календарь">
           <svg width="21" height="22" viewBox="0 0 21 22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
         </button>
@@ -115,7 +115,7 @@
         <button type="button" name="less" class="button form-icon less" aria-label="меньше">
           <svg width="12" height="3"><line x1="0" y1="2" x2="12" y2="2" stroke="#a9a9a9" stroke-width="3"/></svg>
         </button>
-        <input class="input-number" id="adults" type="text" name="adults" value="2">
+        <input class="input-number" id="adults" type="text" name="adults" value="2" required>
         <button type="button" name="more" class="button form-icon more" aria-label="больше">
           <svg width="12" height="12"><line x1="0" y1="6" x2="12" y2="6" stroke="#a9a9a9" stroke-width="3"/><line x1="6" y1="0" x2="6" y2="12" stroke="#a9a9a9" stroke-width="3"/></svg>
         </button>
@@ -123,7 +123,7 @@
         <button type="button" name="less" class="button form-icon less" aria-label="меньше">
           <svg width="12" height="3"><line x1="0" y1="2" x2="12" y2="2" stroke="#a9a9a9" stroke-width="3"/></svg>
         </button>
-        <input class="input-number" id="children" type="text" name="children" value="0">
+        <input class="input-number" id="children" type="text" name="children" value="0" required>
         <button type="button" name="more" class="button form-icon more" aria-label="больше">
           <svg width="12" height="12"><line x1="0" y1="6" x2="12" y2="6" stroke="#a9a9a9" stroke-width="3"/><line x1="6" y1="0" x2="6" y2="12" stroke="#a9a9a9" stroke-width="3"/></svg>
         </button>
@@ -148,17 +148,7 @@
         </a>
       </p>
     </footer>
-
-  <script>
-  var openBooking = document.querySelector(".open-booking");
-  var bookingForm = document.querySelector(".booking-form");
-
-  openBooking.addEventListener("click", function (evt) {
-    evt.preventDefault();
-    bookingForm.classList.add("booking-form-hide");
-    checkin.focus();
-  });
-  </script>
+  <script src="js/script.js"></script>
   </div>
   </body>
 </html>
