--- a/hotels.html
+++ b/hotels.html
@@ -55,11 +55,11 @@
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="motel" checked>
-                <label for="hotel">Мотель</label>
+                <label for="motel">Мотель</label>
               </li>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartment" id="apartment" checked>
-                <label for="hotel">Апартаменты</label>
+                <label for="apartment">Апартаменты</label>
               </li>
           </ul>
           </fieldset>
