--- a/index.html
+++ b/index.html
@@ -35,57 +35,57 @@
       </section>
 
       <section class="features">
-        <ol class="features-list">
-          <li class="feature feature-major">
+        <div class="features-list">
+          <div class="feature feature-major">
             <div class="feature-major-wrapper">
               <div class="feature-major-text">
-              <h2 class="feature">Настоящий<br>городок</h2>
+              <h2 class="feature feature-name">Настоящий городок</h2
               <span class="feature-number">— №1 —</span>
               <p class="feature-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
               <img class="authentic-town-pic" src="img/feature-1.jpg" width='800' height="260" alt="Город Седона">
             </div>
-              <ul class="town-specs">
-                <li class="town-spec spec-stay">
+              <div class="town-specs">
+                <div class="town-spec spec-stay">
                   <h2 class="spec-name">Жильё</h2>
                   <p class="spec-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-                </li>
-                <li class="town-spec spec-food">
+                </div>
+                <div class="town-spec spec-food">
                   <h2 class="spec-name">Еда</h2>
                   <p class="spec-description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                </li>
-                <li class="town-spec spec-souvenirs">
+                </div>
+                <div class="town-spec spec-souvenirs">
                   <h2 class="spec-name">Сувениры</h2>
                   <p class="spec-description">Не только китайского, но и местного производства!</p>
-                </li>
-              </ul>
-          </li>
-          <li class="feauture feature-major-second">
+                </div>
+              </div>
+          </div>
+          <div class="feauture feature-major-second">
             <div class="feature-major-wrapper">
               <div class="feature-major-text">
-            <h2 class="feature">Там есть<br>Мост дьявола</h2>
+            <h2 class="feature feature-name">Там есть<br>Мост дьявола</h2>
             <span class="feature-number">— №2 —</span>
             <p class="feature-description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
             <img class="devils-bridge-pic" src="img/feature-2.jpg" width='800' height="260" alt="Мост Дьявола">
           </div>
-          </li>
-          <li class="feature feature-minor">
+          </div>
+          <div class="feature feature-minor">
             <h2 class="feature">Небольшая площадь</h2>
             <span class="feature-number">— №3 —</span>
             <p class="feature-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="feature feature-minor">
+          </div>
+          <div class="feature feature-minor">
             <h2 class="feature">Красивая дорога</h2>
             <span class="feature-number">— №4 —</span>
             <p class="feature-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="feature feature-minor">
+          </div>
+          <div class="feature feature-minor">
             <h2 class="feature">Мало туристов</h2>
             <span class="feature-number">— №5 —</span>
             <p class="feature-description">Большинство едет в гранд каньон и толпится там</p>
-          </li>
-        </ol>
+          </div>
+        </div>
       </section>
 
       <section class="booking">
@@ -148,7 +148,9 @@
         </a>
       </p>
     </footer>
-  <script src="js/script.js"></script>
+
+  <script src="js/script.js">
+</script>
   </div>
   </body>
 </html>
