--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="feature feature-major">
             <div class="feature-major-wrapper">
               <div class="feature-major-text">
-              <h2 class="feature feature-name">Настоящий городок</h2
+              <h2 class="feature feature-name">Настоящий городок</h2>
               <span class="feature-number">— №1 —</span>
               <p class="feature-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
