--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <button type="submit" class="button-search">Найти</button>
   </form>
 </section>
+</main>
 
     <footer class="main-footer">
       <p class="hashtag">#visitsedona</p>
@@ -150,6 +151,5 @@
 
   <script src="js/script.js">
 </script>
-  </div>
   </body>
 </html>
