--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div class="container modal-map">
-
      <header class="main-header">
        <nav class="main-navigation">
          <a class="header-logo">
@@ -148,8 +147,8 @@
         </a>
       </p>
     </footer>
-
-  <script src="js/script.js">
+</div>
+<script src="js/script.js">
 </script>
-  </body>
+</body>
 </html>
